Implements: FS#303 - multiple advanced-services with same name ( fix 3 ) Optimized the layout of these error lines. Removed border around lines, and trying to make the background look better, than the browsers default handling. Can differ extremly from browser to browser, but i think its now looking nice on Firefox and Chrome.

--- a/design_templates/nconf_fresh/jQuery/nconf-widget.css
+++ b/design_templates/nconf_fresh/jQuery/nconf-widget.css
@@ -231,3 +231,12 @@ ICONs ICON BARs etc
 }
 */
 
+/* special image background for optimize selected style on error lines */
+#toBox_advanced_services option.ui-state-error:checked {
+    background-image: url("nconf/images/ui-bg_flat_100_D05353_40x100.png");
+}
+/* select fields: remove border around error lines if element is select field */
+select option.ui-state-error.ui-state-error.highlight {
+    border-style: none;
+}
+
